# ms-dev-env

./: .gitignore  .mcp.json  README.md  config.toml  pyproject.toml  setup.sh
.github/: CODEOWNERS
.github/actions/setup-ms-runtime/: action.yml
.github/actions/validate-distribution-manager-contract/: action.yml
.github/workflows/: builds.yml  ci.yml  integration.yml  release.yml  test-setup.yml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
commands/: ms  ms-legacy
docs/: README.md
docs/memories/: README.md
ms/: __init__.py  __main__.py
ms/cli/: __init__.py  app.py  context.py  release_fsm.py  release_guided.py  release_guided_app.py  release_guided_bootstrap.py  release_guided_common.py  release_guided_content.py  release_guided_dependencies.py  release_guided_green_commit.py  release_guided_selectors.py  selector.py
ms/cli/commands/: ux.py  (+40 more)
ms/core/: __init__.py  app.py  codebase.py  config.py  errors.py  platformio_runtime.py  result.py  structured.py  user_workspace.py  workspace.py
ms/data/: bridge_checksums.toml  hints.toml  release_graph.toml  repos.maintainer.toml  repos.toml  test_dependencies.toml  toolchains.toml
ms/git/: __init__.py  multi.py  repository.py
ms/oc_cli/: common.py  oc_build.py  oc_monitor.py  oc_upload.py
ms/output/: __init__.py  console.py  errors.py
ms/platform/: __init__.py  detection.py  files.py  paths.py  process.py  resources.py  shell.py
ms/release/: __init__.py  contracts.py  errors.py
ms/services/: __init__.py  bitwig.py  bridge.py  bridge_headless.py  build.py  build_errors.py  check.py  device_fs.py  device_fs_codec.py  dist.py  hardware.py  prereqs.py  repo_profiles.py  repos.py  setup.py  system_install.py  toolchains.py  unit_tests.py  ux_workflows.py
ms/test/: __init__.py  conftest.py  test_integration_phase1.py  test_integration_phase2.py  test_integration_phase3.py
ms/tools/: __init__.py  api.py  base.py  download.py  github.py  http.py  installer.py  pins.py  registry.py  resolver.py  state.py  wrapper.py
ms_cli/: cli.py
(+445 files in other folders)
