[project]
name = "midi-studio.ms-dev-env"
version = "0.2.0"
description = "MIDI Studio Development Environment"
requires-python = ">=3.13"
dependencies = [
  "rich>=13.0.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-mock>=3.12.0",
  "pyright>=1.1.350",
]

[project.scripts]
ms = "ms.cli.app:main"
oc-build = "ms.oc_cli.oc_build:main"
oc-upload = "ms.oc_cli.oc_upload:main"
oc-monitor = "ms.oc_cli.oc_monitor:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["ms", "ms.*"]

[tool.setuptools.package-data]
ms = ["data/*.toml"]

[tool.pytest.ini_options]
testpaths = ["ms/test"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short -m \"not network\""
markers = [
    "network: marks tests as requiring network access (deselect with '-m \"not network\"')",
]

[tool.pyright]
include = ["ms"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
